--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,13 @@
                 <div class="uk-navbar-left">
                     <!--logo-->
                     <a class="uk-navbar-item uk-logo" href="/">vse-evakuatory.ru</a>
-                </div>
 
-                <div class="uk-navbar-right">
                     <!--mobile menu toggle-->
                     <a href="#offcanvas-overlay" class="uk-navbar-toggle"
                        uk-navbar-toggle-icon uk-toggle>
                     </a>
                 </div>
+
             </nav>
         </header>
 
@@ -32,11 +31,13 @@
         <div class="top-line uk-background-default">
             <nav uk-navbar>
                 <div class="uk-navbar-left uk-visible@s">
-                    <div class="uk-navbar-item uk-button-group">
-                        <button class="uk-button uk-button-small uk-button-default">Округ</button>
-                        <button class="uk-button uk-button-small uk-button-default">Метро</button>
-                        <button class="uk-button uk-button-small uk-button-default">Подммосковье</button>
-                        <button class="uk-button uk-button-small uk-button-default">Тип</button>
+                    <div class="uk-navbar-item">
+                        <div>
+                            <button class="uk-button uk-button-small uk-button-primary">Округ</button>
+                            <button class="uk-button uk-button-small uk-button-primary">Метро</button>
+                            <button class="uk-button uk-button-small uk-button-primary">Подммосковье</button>
+                            <button class="uk-button uk-button-small uk-button-primary">Тип</button>
+                        </div>
                     </div>
                 </div>
 
@@ -146,7 +147,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -165,7 +166,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -178,7 +179,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -197,7 +198,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -210,7 +211,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -229,7 +230,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -242,7 +243,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -261,7 +262,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -274,7 +275,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -293,7 +294,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -306,7 +307,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -325,7 +326,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -338,7 +339,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -357,7 +358,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -370,7 +371,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -389,7 +390,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -402,7 +403,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -421,7 +422,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
@@ -434,7 +435,7 @@
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
                                         <h4 class="uk-card-title uk-margin-remove-bottom">м. Киевская</h4>
                                         <div>
-                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-primary">(963)</span> 782-83-25</a>
+                                            <a class="uk-h4 uk-link-reset" href="tel:+79637828325">+7 <span class="uk-text-warning">(963)</span> 782-83-25</a>
                                         </div>
 
 
@@ -453,7 +454,7 @@
 
                                         <div class="uk-grid-small uk-flex-middle uk-flex-between  uk-margin" uk-grid>
                                             <div>
-                                                <div class="uk-text-primary">Цена от 2000 руб</div>
+                                                <div class="uk-text-warning">Цена от 2000 руб</div>
                                             </div>
 
                                             <div>
