--- a/src/index.html
+++ b/src/index.html
@@ -28,15 +28,15 @@
         </header>
 
         <!--Filter-->
-        <div class="top-line uk-background-default">
+        <div class="top-line uk-background-primary">
             <nav uk-navbar>
                 <div class="uk-navbar-left uk-visible@s">
                     <div class="uk-navbar-item">
                         <div>
-                            <button class="uk-button uk-button-small uk-button-primary">Округ</button>
-                            <button class="uk-button uk-button-small uk-button-primary">Метро</button>
-                            <button class="uk-button uk-button-small uk-button-primary">Подммосковье</button>
-                            <button class="uk-button uk-button-small uk-button-primary">Тип</button>
+                            <button class="uk-button uk-button-small uk-button-secondary">Округ</button>
+                            <button class="uk-button uk-button-small uk-button-secondary">Метро</button>
+                            <button class="uk-button uk-button-small uk-button-secondary">Подммосковье</button>
+                            <button class="uk-button uk-button-small uk-button-secondary">Тип</button>
                         </div>
                     </div>
                 </div>
