--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                                 <!-- Calculator -->
                                 <div id="toogle-bar" class="toogle-bar uk-width-medium uk-flex-last@s">
                                     <div class="uk-card uk-card-small uk-card-default uk-card-hover uk-card-body">
-                                        <h4 class="uk-card-title uk-text-center">Вызвать эвакуатор</h4>
+                                        <h3 class="uk-card-title uk-text-bold">Вызвать эвакуатор</h3>
                                         <form>
                                             <div class="uk-margin">
                                                 <select>
